--- a/app/assets/stylesheets/components/_client.css.sass
+++ b/app/assets/stylesheets/components/_client.css.sass
@@ -11,3 +11,14 @@ $account-border-color: #d5d5d5
   width: 18%
   right: 20px
   top: $tab-top
+
+.tab-content
+  position: absolute
+  top: 46px
+  right: 20px
+  bottom: 18px
+  left: $main-left-spacing
+  background-color: white
+  border: 1px solid #dbdbdb
+  border-color: rgba(0,0,0,0.17)
+  +border-radius(0 2px 2px 2px)
