--- a/app/assets/stylesheets/components/_tab_content.css.sass
+++ b/app/assets/stylesheets/components/_tab_content.css.sass
@@ -1,16 +1,6 @@
 // Layout
 
-// TODO the layout stuff here should go into client style
 .tab-content
-  overflow: hidden
-  position: absolute
-  top: 46px
-  right: 0
-  bottom: 18px
-  left: 0
-  clear: both
-  margin-left: $main-left-spacing
-  margin-right: 20px
   background-color: white
   border: 1px solid #dbdbdb
   border-color: rgba(0,0,0,0.17)
