--- a/app/assets/stylesheets/components/_tooltip.css.sass
+++ b/app/assets/stylesheets/components/_tooltip.css.sass
@@ -9,7 +9,7 @@
 
 .tooltip
   position: absolute
-  z-index: 1030
+  z-index: 1000
   display: block
   font-size: 11px
   line-height: 1.4
