--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -4,5 +4,4 @@
   bottom: 0
   left: 0
   right: 0
-  z-index: 0
   min-width: 1000px
